feat: :sparkles: Implements Bellman-Ford's algorithm for shortest paths.

--- a/bellman-ford/Makefile
+++ b/bellman-ford/Makefile
@@ -3,24 +3,24 @@ CFLAGS = -Wall -Iinclude -g
 SRC_DIR = src
 OBJ_DIR = obj
 
-_SRC = heap.c graph.c
+_SRC = bf_graph.c
 _OBJ = $(_SRC:.c=.o)
 SRC = $(patsubst %, $(SRC_DIR)/%, $(_SRC))
 OBJ = $(patsubst %, $(OBJ_DIR)/%, $(_OBJ))
 
 
-all: dijkstra
+all: bellman_ford
 
 lib: $(OBJ)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) -c $< -o $@
 \
-dijkstra: lib
-	$(CC) $(CFLAGS) dijkstra.c $(OBJ) -o dijkstra
+bellman_ford: lib
+	$(CC) $(CFLAGS) bellman_ford.c $(OBJ) -o bellman_ford
 
 comp_to_root: lib
-	$(CC) $(CFLAGS) dijkstra.c $(OBJ) -o ../dj && make clean
+	$(CC) $(CFLAGS) bellman_ford.c $(OBJ) -o ../bf && make clean
 
 clean:
-	rm -f $(OBJ_DIR)/*.o dijkstra
+	rm -f $(OBJ_DIR)/*.o bellman_ford
